--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			var url = new URL(url_string);
 			var c = url.searchParams.get("image");
 			
-			image.src = "images/" + c;
+			image.src = c;
 		}
 	</script>
   </body>
